Fix modal z-index mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -319,6 +319,10 @@ html {
   font-weight: 600;
 }
 
+.arabic-calendar-month-name {
+  display: none;
+}
+
 .arabic-date {
   font-family: "Amiri", serif !important;
 }
@@ -499,7 +503,7 @@ html {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
